Make chess board appear

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Chess</title>
+    <link data-trunk rel="scss" href="index.scss" />
   </head>
   <body>
   </body>
