deploy: 155465537f524be729b1910eed507dd509ef3fc3

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html><html lang="en"><head>
     <title>Chess</title>
+    <link rel="stylesheet" href="/chess-rs/index-5535546db45a9581.css">
   
-<link rel="preload" href="/chess-rs/index-81e26517b18c47bd_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/chess-rs/index-81e26517b18c47bd.js"></head>
+<link rel="preload" href="/chess-rs/index-cc66a8c38c4aba30_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/chess-rs/index-cc66a8c38c4aba30.js"></head>
   <body>
   
 
-<script type="module">import init from '/chess-rs/index-81e26517b18c47bd.js';init('/chess-rs/index-81e26517b18c47bd_bg.wasm');</script></body></html>
+<script type="module">import init from '/chess-rs/index-cc66a8c38c4aba30.js';init('/chess-rs/index-cc66a8c38c4aba30_bg.wasm');</script></body></html>
